
[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-0 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:1 - 3:15)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const _any_: any;
   3 | _any_ as string;
     | ~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-1 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:1 - 3:16)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const _unknown_: unknown;
   3 | _unknown_ as any;
     | ~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-2 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:1 - 3:17)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const _any_: any;
   3 | _any_ as Function;
     | ~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-3 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:1 - 3:14)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const _any_: any;
   3 | _any_ as never;
     | ~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-4 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (2:1 - 2:12)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   1 | 
   2 | 'foo' as any;
     | ~~~~~~~~~~~~
   3 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-5 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (2:13 - 2:25)
Message: Unsafe assertion from error typed detected: consider using type guards or a safer assertion.
   1 | 
   2 | const bar = foo as number;
     |             ~~~~~~~~~~~~~
   3 |         
---

[TestNoUnsafeTypeAssertionRule_AnyAssertions/invalid-6 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (2:13 - 2:30)
Message: Unsafe assertion to error typed detected: consider using a more specific type to ensure safety.
   1 | 
   2 | const bar = 'foo' as errorType;
     |             ~~~~~~~~~~~~~~~~~~
   3 |         
---

[TestNoUnsafeTypeAssertionRule_ArrayAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:13)
Message: Unsafe type assertion: type 'string[]' is more narrow than the original type.
   2 | declare const a: (string | number)[];
   3 | a as string[];
     | ~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ArrayAssertions/invalid-1 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:1 - 3:13)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const a: any[];
   3 | a as number[];
     | ~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ArrayAssertions/invalid-2 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:1 - 3:10)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const a: number[];
   3 | a as any[];
     | ~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ArrayAssertions/invalid-3 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:13)
Message: Unsafe type assertion: type 'number[]' is more narrow than the original type.
   2 | declare const a: unknown[];
   3 | a as number[];
     | ~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ArrayAssertions/invalid-4 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:12)
Message: Unsafe type assertion: type 'never[]' is more narrow than the original type.
   2 | declare const a: number[];
   3 | a as never[];
     | ~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:11)
Message: Unsafe type assertion: type 'string' is more narrow than the original type.
   2 | declare const a: string | number;
   3 | a as string;
     | ~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-1 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:28)
Message: Unsafe type assertion: type 'string' is more narrow than the original type.
   2 | declare const a: string | number;
   3 | a satisfies string as string;
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-2 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:9)
Message: Unsafe type assertion: type 'string' is more narrow than the original type.
   2 | declare const a: string | number;
   3 | <string>a;
     | ~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-3 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:21)
Message: Unsafe type assertion: type 'string | boolean' is more narrow than the original type.
   2 | declare const a: string | undefined;
   3 | a as string | boolean;
     | ~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-4 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:19)
Message: Unsafe type assertion: type '"bar"' is more narrow than the original type.
   2 | declare const a: string;
   3 | a as 'foo' as 'bar';
     | ~~~~~~~~~~~~~~~~~~~
   4 |         

Diagnostic 2: unsafeTypeAssertion (3:1 - 3:10)
Message: Unsafe type assertion: type '"foo"' is more narrow than the original type.
   2 | declare const a: string;
   3 | a as 'foo' as 'bar';
     | ~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-5 - 1]
Diagnostic 1: unsafeTypeAssertion (3:10 - 3:18)
Message: Unsafe type assertion: type 'true' is more narrow than the original type.
   2 | function foo<T extends boolean>(a: T) {
   3 |   return a as true;
     |          ~~~~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-6 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:68)
Message: Unsafe type assertion: type 'Omit<Required<Readonly<{ hello: "world"; foo: "bar"; }>>, "foo">' is more narrow than the original type.
   2 | declare const a: string;
   3 | a as Omit<Required<Readonly<{ hello: 'world'; foo: 'bar' }>>, 'foo'>;
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_BasicAssertions/invalid-7 - 1]
Diagnostic 1: unsafeTypeAssertion (3:13 - 3:27)
Message: Unsafe type assertion: type 'number[]' is more narrow than the original type.
   2 | declare const foo: readonly number[];
   3 | const bar = foo as number[];
     |             ~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ClassAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (9:1 - 9:8)
Message: Unsafe type assertion: type 'Bar' is more narrow than the original type.
   8 | declare const a: Foo;
   9 | a as Bar;
     | ~~~~~~~~
  10 |         
---

[TestNoUnsafeTypeAssertionRule_FunctionAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:24)
Message: Unsafe type assertion: type '() => void' is more narrow than the original type.
   2 | declare const _function_: Function;
   3 | _function_ as () => void;
     | ~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_FunctionAssertions/invalid-1 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:1 - 3:17)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const _function_: Function;
   3 | _function_ as any;
     | ~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_FunctionAssertions/invalid-2 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:19)
Message: Unsafe type assertion: type 'never' is more narrow than the original type.
   2 | declare const _function_: Function;
   3 | _function_ as never;
     | ~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (4:17 - 4:34)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   3 | function func<T extends Obj>() {
   4 |   const myObj = { foo: 'hi' } as T;
     |                 ~~~~~~~~~~~~~~~~~~
   5 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-1 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (5:17 - 5:22)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   4 |   const o: Obj = { foo: 'hi' };
   5 |   const myObj = o as T;
     |                 ~~~~~~
   6 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-2 - 1]
Diagnostic 1: unsafeTypeAssertion (5:27 - 5:48)
Message: Unsafe type assertion: type 'CustomObjectT' is more narrow than the original type.
   4 | ): CustomObjectT {
   5 |   const newCustomObject = input as CustomObjectT;
     |                           ~~~~~~~~~~~~~~~~~~~~~~
   6 |   return newCustomObject;
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-3 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (3:3 - 3:8)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   2 | function unknownConstraint<T extends unknown>(x: T, y: string) {
   3 |   y as T; // banned; generic arbitrary subtype
     |   ~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-4 - 1]
Diagnostic 1: unsafeToUnconstrainedTypeAssertion (3:3 - 3:8)
Message: Unsafe type assertion: 'T' could be instantiated with an arbitrary type which could be unrelated to the original type.
   2 | function unconstrained<T>(x: T, y: string) {
   3 |   y as T;
     |   ~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-5 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (5:3 - 5:8)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   4 | function anyConstraint<T extends any>(x: T, y: string) {
   5 |   y as T; // banned; generic arbitrary subtype
     |   ~~~~~~
   6 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-6 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (6:3 - 6:8)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   5 | ) {
   6 |   y as T; // banned; assignable to constraint
     |   ~~~~~~
   7 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-7 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (3:3 - 3:8)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of its constraint.
   2 | function constraintEqualUncastType<T extends string>(x: T, y: string) {
   3 |   y as T; // banned; assignable to constraint
     |   ~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-8 - 1]
Diagnostic 1: unsafeTypeAssertion (6:3 - 6:8)
Message: Unsafe type assertion: type 'T' is more narrow than the original type.
   5 | ) {
   6 |   y as T; // banned; *not* assignable to constraint
     |   ~~~~~~
   7 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-9 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:3 - 3:8)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | function assertFromAny<T extends string | number>(x: T, y: any) {
   3 |   y as T; // banned; just an `any` complaint. Not a generic subtype.
     |   ~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-10 - 1]
Diagnostic 1: unsafeTypeAssertionAssignableToConstraint (6:3 - 6:8)
Message: Unsafe type assertion: the original type is assignable to the constraint of type 'V', but 'V' could be instantiated with a different subtype of its constraint.
   5 | ) {
   6 |   x as V; // banned; assignable to constraint
     |   ~~~~~~
   7 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-11 - 1]
Diagnostic 1: unsafeToUnconstrainedTypeAssertion (3:3 - 3:8)
Message: Unsafe type assertion: 'V' could be instantiated with an arbitrary type which could be unrelated to the original type.
   2 | function parameterExtendsUnconstrainedParameter<T, V extends T>(x: T, y: V) {
   3 |   x as V; // banned; unconstrained arbitrary type
     |   ~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-12 - 1]
Diagnostic 1: unsafeToUnconstrainedTypeAssertion (3:3 - 3:8)
Message: Unsafe type assertion: 'T' could be instantiated with an arbitrary type which could be unrelated to the original type.
   2 | function twoUnconstrained<T, V>(x: T, y: V) {
   3 |   y as T;
     |   ~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-13 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:13)
Message: Unsafe type assertion: type 'string' is more narrow than the original type.
   2 | function toNarrower<T>(x: T, y: string) {
   3 |   x as string; // banned; ordinary 'string' narrower than 'T'.
     |   ~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-14 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:3 - 3:10)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | function unconstrainedToAny<T>(x: T) {
   3 |   x as any;
     |   ~~~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-15 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:3 - 3:10)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | function stringToAny<T extends string>(x: T) {
   3 |   x as any;
     |   ~~~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_GenericAssertions/invalid-16 - 1]
Diagnostic 1: unsafeTypeAssertion (3:3 - 3:16)
Message: Unsafe type assertion: type '"a" | "b"' is more narrow than the original type.
   2 | function stringToNarrower<T extends string>(x: T) {
   3 |   x as 'a' | 'b';
     |   ~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnsafeTypeAssertionRule_NeverAssertions/invalid-0 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:1 - 3:14)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const _never_: never;
   3 | _never_ as any;
     | ~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_NeverAssertions/invalid-1 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:17)
Message: Unsafe type assertion: type 'never' is more narrow than the original type.
   2 | declare const _string_: string;
   3 | _string_ as never;
     | ~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ObjectAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (2:11 - 5:1)
Message: Unsafe type assertion: type '{ bar: number; bas: string; }' is more narrow than the original type.
   1 | 
   2 | var foo = {} as {
     |           ~~~~~~~
   3 |   bar: number;
     | ~~~~~~~~~~~~~~
   4 |   bas: string;
     | ~~~~~~~~~~~~~~
   5 | };
     | ~
   6 |         
---

[TestNoUnsafeTypeAssertionRule_ObjectAssertions/invalid-1 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:70)
Message: Unsafe type assertion: type '{ hello: string; world: string; }' is more narrow than the original type.
   2 | declare const a: { hello: string };
   3 | a satisfies Record<string, string> as { hello: string; world: string };
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_ObjectAssertions/invalid-2 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:22)
Message: Unsafe type assertion: type '{ hello: string; }' is more narrow than the original type.
   2 | declare const a: { hello?: string };
   3 | a as { hello: string };
     | ~~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:20)
Message: Unsafe type assertion: type 'Promise<string>' is more narrow than the original type.
   2 | declare const a: Promise<string | number>;
   3 | a as Promise<string>;
     | ~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-1 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:1 - 3:20)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const a: Promise<any>;
   3 | a as Promise<number>;
     | ~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-2 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:1 - 3:17)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const a: Promise<number>;
   3 | a as Promise<any>;
     | ~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-3 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:1 - 3:19)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const a: Promise<number[]>;
   3 | a as Promise<any[]>;
     | ~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-4 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:20)
Message: Unsafe type assertion: type 'Promise<number>' is more narrow than the original type.
   2 | declare const a: Promise<unknown>;
   3 | a as Promise<number>;
     | ~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_PromiseAssertions/invalid-5 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:19)
Message: Unsafe type assertion: type 'Promise<never>' is more narrow than the original type.
   2 | declare const a: Promise<number>;
   3 | a as Promise<never>;
     | ~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-0 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:13)
Message: Unsafe type assertion: type '[string]' is more narrow than the original type.
   2 | declare const a: [string | number];
   3 | a as [string];
     | ~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-1 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:21)
Message: Unsafe type assertion: type '[string, string]' is more narrow than the original type.
   2 | declare const a: [string, number];
   3 | a as [string, string];
     | ~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-2 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:21)
Message: Unsafe type assertion: type '[string, number]' is more narrow than the original type.
   2 | declare const a: [string];
   3 | a as [string, number];
     | ~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-3 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:13)
Message: Unsafe type assertion: type '[string]' is more narrow than the original type.
   2 | declare const a: [string, number];
   3 | a as [string];
     | ~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-4 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:1 - 3:13)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const a: [any];
   3 | a as [number];
     | ~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-5 - 1]
Diagnostic 1: unsafeOfAnyTypeAssertion (3:1 - 3:21)
Message: Unsafe assertion from `any` detected: consider using type guards or a safer assertion.
   2 | declare const a: [number, any];
   3 | a as [number, number];
     | ~~~~~~~~~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-6 - 1]
Diagnostic 1: unsafeToAnyTypeAssertion (3:1 - 3:10)
Message: Unsafe assertion to `any` detected: consider using a more specific type to ensure safety.
   2 | declare const a: [number];
   3 | a as [any];
     | ~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-7 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:13)
Message: Unsafe type assertion: type '[number]' is more narrow than the original type.
   2 | declare const a: [unknown];
   3 | a as [number];
     | ~~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-8 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:12)
Message: Unsafe type assertion: type '[never]' is more narrow than the original type.
   2 | declare const a: [number];
   3 | a as [never];
     | ~~~~~~~~~~~~
   4 |         
---

[TestNoUnsafeTypeAssertionRule_TupleAssertions/invalid-9 - 1]
Diagnostic 1: unsafeTypeAssertion (3:1 - 3:22)
Message: Unsafe type assertion: type '[Promise<string>]' is more narrow than the original type.
   2 | declare const a: [Promise<string | number>];
   3 | a as [Promise<string>];
     | ~~~~~~~~~~~~~~~~~~~~~~
   4 |         
---
